// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrencyConverter component renders the component 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa dBnMMB"
  >
    <h1
      class="sc-bZQynM cvwvqF"
    >
      Currency exchange
    </h1>
    <div
      class="sc-bwzfXH sc-htpNat dtmtwx"
    >
      <div
        data-originalcomponent="PocketFrom"
      />
      <div
        class="sc-ifAKCX gHNnsm"
      >
        <div
          data-originalcomponent="CurrentRate"
        />
      </div>
      <div
        class="sc-EHOje btOkpo"
      >
        <div
          data-originalcomponent="ChangePocketsButton"
        />
      </div>
    </div>
    <div
      class="sc-bwzfXH sc-bxivhb eMThae"
    >
      <div
        data-originalcomponent="PocketTo"
      />
      <div
        data-originalcomponent="ExchangeButton"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`CurrencyConverter component show loader when isBusy = true 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa dBnMMB"
  >
    <h1
      class="sc-bZQynM cvwvqF"
    >
      Currency exchange
    </h1>
    <div
      data-originalcomponent="Loader"
    />
  </div>
</DocumentFragment>
`;
